deployment/k8s/namespace.yaml
# deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-namespace
  labels:
    name: app-namespace

---
